Update contact email in privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -100,7 +100,7 @@ Any updates will be published at the same URL.
 If you have questions about this Privacy Policy, contact:
 </p>
 <p>
-<strong>Email:</strong> andrej.turk89@gmail.com
+<strong>Email:</strong> legal@gravity-point.hr
 </p>
 
 </body>
