Update contact email in terms and conditions

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -96,7 +96,7 @@ without regard to conflict of law principles.
 For questions regarding these Terms, contact:
 </p>
 <p>
-<strong>Email:</strong> andrej.turk89@gmail.com
+<strong>Email:</strong> legal@gravity-point.hr
 </p>
 
 </body>
