Update privacy policy with revised language and sections

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -28,74 +28,103 @@
 
 <h1>Privacy Policy</h1>
 <p><strong>Focus Blocker</strong></p>
-<small>Last updated: 2025-12-28</small>
+<small>Last updated: 2026-02-11</small>
 
 <h2>1. Introduction</h2>
 <p>
-Focus Blocker respects your privacy. This app is designed to work entirely on your device
-and does not collect, store, or share personal data.
+Focus Blocker is designed with privacy in mind. The app operates locally on your device
+and does not collect, sell, or share personal data.
 </p>
 
 <h2>2. Data Collection</h2>
 <p>
-Focus Blocker does not collect any personal data.
+Focus Blocker does not require user accounts and does not collect personal information.
 </p>
 <ul>
-  <li>No accounts</li>
   <li>No analytics</li>
   <li>No tracking</li>
-  <li>No advertising IDs</li>
-  <li>No third-party SDKs</li>
+  <li>No advertising identifiers</li>
+  <li>No third-party advertising SDKs</li>
 </ul>
 <p>
-All app data (settings, focus sessions) is stored locally on your device.
+All app settings, schedules, and focus session data are stored locally on your device.
+No user data is transmitted to external servers.
 </p>
 
-<h2>3. Accessibility Service Usage</h2>
+<h2>3. Usage Access Permission</h2>
 <p>
-Focus Blocker uses the Android Accessibility Service solely to provide its core functionality:
-blocking selected apps during focus sessions.
+Focus Blocker uses the Android Usage Access permission (Usage Stats)
+to detect which application is currently in the foreground.
 </p>
 <p>
-Specifically, Accessibility is used to:
+This is required solely to determine whether a selected app should be blocked
+during an active focus session.
 </p>
-<ul>
-  <li>detect which app is currently in the foreground</li>
-  <li>prevent access to apps selected for blocking</li>
-</ul>
 <p>
 The app:
 </p>
 <ul>
-  <li>does not record screen content</li>
-  <li>does not store UI data</li>
-  <li>does not transmit accessibility data</li>
-  <li>does not monitor user behavior beyond app blocking</li>
+  <li>does not store detailed app usage history</li>
+  <li>does not analyze user behavior</li>
+  <li>does not transmit usage data</li>
+  <li>processes usage information only in real time</li>
 </ul>
 <p>
-The Accessibility Service is not used for advertising, analytics, or tracking purposes.
-Accessibility data is processed only in real time and never leaves the device.
+All processing happens locally on your device.
 </p>
 
-<h2>4. Data Sharing</h2>
+<h2>4. Display Over Other Apps (Overlay Permission)</h2>
 <p>
-Focus Blocker does not share data with third parties.
-No data is transmitted to servers because no servers are used.
+Focus Blocker uses the “Display over other apps” (overlay) permission
+to show a blocking screen above apps that are restricted during a focus session.
 </p>
-
-<h2>5. Children’s Privacy</h2>
 <p>
-Focus Blocker does not knowingly collect data from children.
-Because no personal data is collected, there is no risk of child data misuse.
+The overlay is used only to enforce blocking functionality.
+It does not capture screen content, record interactions,
+or monitor activity outside of blocking logic.
 </p>
 
-<h2>6. Changes to This Policy</h2>
+<h2>5. Data Sharing</h2>
+<p>
+Focus Blocker does not share any data with third parties.
+No personal data is transmitted because the app does not use remote servers.
+</p>
+
+<h2>6. Support Communication</h2>
+<p>
+If you voluntarily contact support (for example via email),
+you may choose to provide diagnostic information to help resolve your issue.
+</p>
+<p>
+This may include:
+</p>
+<ul>
+  <li>App version</li>
+  <li>Android version</li>
+  <li>Device model</li>
+  <li>Battery optimization status</li>
+  <li>Premium or Free status</li>
+  <li>Selected blocking mode (e.g. hard or soft blocking)</li>
+</ul>
+<p>
+This information is used only to provide technical support
+and is not used for analytics or marketing purposes.
+</p>
+
+<h2>7. Children’s Privacy</h2>
+<p>
+Focus Blocker does not knowingly collect personal information from children.
+Since no personal data is collected automatically,
+there is no profiling or behavioral tracking.
+</p>
+
+<h2>8. Changes to This Policy</h2>
 <p>
 This Privacy Policy may be updated if the app’s functionality changes.
 Any updates will be published at the same URL.
 </p>
 
-<h2>7. Contact</h2>
+<h2>9. Contact</h2>
 <p>
 If you have questions about this Privacy Policy, contact:
 </p>
