Revise terms and conditions for Focus Blocker
Updated terms and conditions with new app functionality, user responsibilities, and subscription details.

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -13,22 +13,16 @@
       line-height: 1.6;
       color: #111;
     }
-    h1, h2 {
-      line-height: 1.25;
-    }
-    small {
-      color: #666;
-    }
-    ul {
-      margin-left: 20px;
-    }
+    h1, h2 { line-height: 1.25; }
+    small { color: #666; }
+    ul { margin-left: 20px; }
   </style>
 </head>
 <body>
 
 <h1>Terms & Conditions</h1>
 <p><strong>Focus Blocker</strong></p>
-<small>Last updated: 2025-12-28</small>
+<small>Last updated: 2026-02-13</small>
 
 <h2>1. Acceptance of Terms</h2>
 <p>
@@ -36,64 +30,123 @@ By installing or using Focus Blocker, you agree to these Terms & Conditions.
 If you do not agree, do not use the app.
 </p>
 
-<h2>2. App Functionality</h2>
+<h2>2. Purpose of the App</h2>
 <p>
-Focus Blocker is provided as a tool to help reduce distractions by blocking selected apps during focus sessions.
+Focus Blocker is a productivity tool designed to help reduce distractions
+by limiting access to selected apps during focus sessions.
 </p>
 <p>
-The app is provided <em>“as is”</em>, without guarantees of uninterrupted or error-free operation.
-</p>
-
-<h2>3. No Warranty</h2>
-<p>
-Focus Blocker makes no warranties regarding its effectiveness, reliability, or suitability for a particular purpose.
-</p>
-<p>
-Use of the app is at your own risk.
+The app is not a parental control solution, device management system,
+security tool, or safety-critical application.
+It must not be relied upon in emergency situations.
 </p>
 
-<h2>4. Limitation of Liability</h2>
+<h2>3. App Functionality Disclaimer</h2>
 <p>
-The developer is not responsible for:
+Focus Blocker attempts to limit access to selected apps based on
+your configuration and granted permissions.
+</p>
+<p>
+Due to differences in Android versions, device manufacturers,
+system updates, battery restrictions, and user settings,
+blocking may not function continuously or perfectly in all cases.
+</p>
+<p>
+The app is provided <em>“as is”</em>, without guarantees of uninterrupted
+or error-free operation.
+</p>
+
+<h2>4. Permissions & System Settings</h2>
+<p>
+To provide its functionality, Focus Blocker may request:
 </p>
 <ul>
-  <li>lost productivity</li>
-  <li>missed notifications</li>
-  <li>data loss</li>
-  <li>any indirect or consequential damages</li>
+  <li><strong>Usage Access (Usage Stats)</strong> – to detect the currently active app.</li>
+  <li><strong>Display over other apps (Overlay)</strong> – to show a blocking screen when a blocked app is opened.</li>
 </ul>
 <p>
-To the maximum extent permitted by law, liability is limited to the amount paid for the app (if any).
+If these permissions are denied, revoked, or restricted,
+the app may not function correctly.
+</p>
+<p>
+Some Android devices apply aggressive battery optimization
+or background process restrictions that may prevent Focus Blocker
+from running reliably.
+</p>
+<p>
+For best performance, users may choose to disable battery optimization
+for Focus Blocker in system settings.
+However, this is optional and entirely at the user’s discretion.
 </p>
 
-<h2>5. User Responsibility</h2>
+<h2>5. Subscriptions & Payments</h2>
+<p>
+Focus Blocker may offer:
+</p>
+<ul>
+  <li>Monthly subscription</li>
+  <li>Yearly subscription</li>
+  <li>Lifetime purchase (one-time payment)</li>
+</ul>
+<p>
+Pricing, billing terms, renewal conditions, and cancellation policies
+are handled by the app store and shown at the time of purchase.
+</p>
+<p>
+Subscriptions may renew automatically unless canceled
+through the app store before the renewal date.
+</p>
+<p>
+Lifetime access applies to the version and features
+available at the time of purchase and does not guarantee
+future feature additions or compatibility with all future devices.
+</p>
+
+<h2>6. User Responsibility</h2>
 <p>
 You are responsible for:
 </p>
 <ul>
-  <li>selecting which apps to block</li>
-  <li>enabling required system permissions</li>
-  <li>understanding how app blocking affects your device usage</li>
+  <li>choosing which apps to block</li>
+  <li>configuring schedules and focus sessions</li>
+  <li>managing permissions and device settings</li>
+  <li>understanding how blocking may affect notifications and app access</li>
 </ul>
 <p>
-Uninstalling the app always disables its functionality.
+Uninstalling the app disables its functionality.
 </p>
 
-<h2>6. Modifications</h2>
+<h2>7. Limitation of Liability</h2>
+<p>
+To the maximum extent permitted by law,
+the developer shall not be liable for:
+</p>
+<ul>
+  <li>lost productivity or missed deadlines</li>
+  <li>missed calls, notifications, or messages</li>
+  <li>device behavior caused by system restrictions or updates</li>
+  <li>data loss or technical malfunctions</li>
+  <li>any indirect, incidental, or consequential damages</li>
+</ul>
+<p>
+Liability is limited to the amount paid for the app (if any).
+</p>
+
+<h2>8. Modifications</h2>
 <p>
 The app and these Terms may be updated at any time.
-Continued use of the app after changes implies acceptance of the updated terms.
+Continued use of the app after changes implies acceptance
+of the updated Terms.
 </p>
 
-<h2>7. Governing Law</h2>
+<h2>9. Governing Law</h2>
 <p>
-These Terms shall be governed by and construed in accordance with the laws of the Republic of Croatia,
-without regard to conflict of law principles.
+These Terms are governed by the laws of the Republic of Croatia.
 </p>
 
-<h2>8. Contact</h2>
+<h2>10. Contact</h2>
 <p>
-For questions regarding these Terms, contact:
+For questions regarding these Terms:
 </p>
 <p>
 <strong>Email:</strong> legal@gravity-point.hr
